--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,11 +6,14 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: ubuntu-12.04
-  - name: centos-6.5
+  - name: ubuntu-14.04
 
 suites:
   - name: default
     run_list:
       - recipe[gina-gisshare_server::default]
     attributes:
+      gisshare:
+        users:
+          - mitch
+          - pete
